fix: GradeDAOTest